--- a/LocationUpdateTest/app/src/main/res/layout/activity_main.xml
+++ b/LocationUpdateTest/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.hansoolabs.test.locationupdatetest.MainActivity">
+    tools:context="com.hansoolabs.test.locationupdate.MainActivity">
 
     <RelativeLayout
         android:id="@+id/map_container"
