first index.html

--- a/LocationUpdateTest/app/src/main/res/values/strings_keys.xml
+++ b/LocationUpdateTest/app/src/main/res/values/strings_keys.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="my_map_key">YOUR_KEY</string>
+    <string name="my_map_key">AIzaSyCNdFqLhsz34YF8xEwvZixSSPhfaje-h7w</string>
 </resources>
